--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
