--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
-    "react": "19.2.0",
+    "react": "^19.2.1",
     "react-countup": "^6.5.3",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
